<resources>
    <string name="app_name">Messenger</string>
    <string name="URL">http://192.168.137.1:8080/</string>
    <string name="signin_username">Login</string>
    <string name="signin_password">Password</string>
    <string name="signin_signup">Sign up</string>
    <string name="signin_signin">Sign in</string>
    <string name="signup_name">Name</string>
    <string name="signup_surname">Surname</string>
    <string name="srch">Поиск</string>
    <string name="login">LOGIN</string>
    <string name="surname">SURNAME</string>
    <string name="name">NAME</string>
    <string name="write_a_message">Write a message</string>
    <string name="url">http://192.168.137.1:8080/mess/</string>
    <string name="refresh">Обновить</string>
    <string name="dialogs">Диалоги</string>
    <string name="welcome">Welcome</string>
</resources>
