<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.igorpavinich.messenger.SignUp_Activity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/signup_image"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_person"
        android:scaleType="centerCrop"
        android:layout_above="@+id/signup_layout"
        app:civ_border_width="2dp"
        app:civ_border_color="#0fa2c7"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_layout"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_name"
                android:id="@+id/signup_name"
                android:singleLine="true"
                android:inputType="textPersonName"
                android:gravity="center"/>
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>
        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_surname"
                android:id="@+id/signup_surname"
                android:singleLine="true"
                android:inputType="textPersonName"
                android:gravity="center"/>
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>
        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signin_username"
                android:id="@+id/signup_username"
                android:singleLine="true"
                android:inputType="textPersonName"
                android:gravity="center"/>
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>
        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signin_password"
                android:id="@+id/signup_password"
                android:singleLine="true"
                android:inputType="textPassword"
                android:gravity="center"/>
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>
        <com.dd.CircularProgressButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/colorAccent"
            android:id="@+id/signup_bSignUp"
            app:cpb_cornerRadius="24dp"
            app:cpb_textIdle="@string/signin_signup"/>
    </LinearLayout>

    <com.dd.CircularProgressButton
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColor="@color/colorAccent"
        android:id="@+id/signup_bSignIn"
        app:cpb_cornerRadius="24dp"
        app:cpb_textIdle="@string/signin_signin"/>

</RelativeLayout>
