<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.igorpavinich.messenger.SignIn_Activity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <!-- <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_account_circle_black_24dp"/>-->
         <com.wrapp.floatlabelededittext.FloatLabeledEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/signin_username"
                 android:id="@+id/signin_username"
                 android:singleLine="true"
                 android:inputType="textPersonName"
                 android:gravity="center"/>
         </com.wrapp.floatlabelededittext.FloatLabeledEditText>
             <!-- </LinearLayout>-->
             <!--<LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_lock_black_24dp"/> -->
            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signin_password"
                    android:id="@+id/signin_password"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:gravity="center"/>
            </com.wrapp.floatlabelededittext.FloatLabeledEditText>
        <!--</LinearLayout>-->
        <com.dd.CircularProgressButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/colorAccent"
            android:id="@+id/signin_bSignIn"
            app:cpb_cornerRadius="24dp"
            app:cpb_textIdle="@string/signin_signin"/>
    </LinearLayout>

    <com.dd.CircularProgressButton
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColor="@color/colorAccent"
        android:id="@+id/signin_bSignUp"
        app:cpb_cornerRadius="24dp"
        app:cpb_textIdle="@string/signin_signup"/>

</RelativeLayout>
