<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.igorpavinich.messenger.ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/llName">
        <ImageView
            android:layout_width="match_parent"
            android:id="@+id/profileImg"
            android:scaleType="centerCrop"
            android:layout_height="match_parent" />
            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fab"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                app:rippleColor="@color/colorPrimary"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:id="@+id/llName"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="20dp"
            android:layout_above="@+id/llSurname"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/name"
                android:layout_weight="1"
                android:gravity="left"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/profileName"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:id="@+id/llSurname"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="20dp"
            android:layout_above="@+id/llLogin"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/surname"
                android:layout_weight="1"
                android:gravity="left"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/profileSurname"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:id="@+id/llLogin"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="20dp"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/login"
                android:layout_weight="1"
                android:gravity="left"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/profileLogin"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:id="@+id/imgSearch"
            android:src="@drawable/ic_search_black_24dp"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:id="@+id/imgMsg"
            android:src="@drawable/ic_message_black_24dp"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:id="@+id/imgProfile"
            android:src="@drawable/ic_account_box_green_24dp"/>
    </LinearLayout>

</LinearLayout>
